# SimpleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  simpleEngine.drawio
Engine/: CMakeLists.txt
Engine/src/: SimpleEngine.h  test.cpp  test.h
Engine/src/RenderSpecific/OpenGL/Window/: OpenGLContext.h  OpenGLWindow.h
Engine/src/RenderSpecific/Window/: OpenGLWindow.cpp  OpenGLWindow.h
Engine/src/SimpleEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  ILayer.h  LayerStack.cpp  LayerStack.h
Engine/src/SimpleEngine/Core/Memory/: Allocator.cpp  Allocator.h  IAllocator.cpp  IAllocator.h  LinearAllocator.cpp  LinearAllocator.h  StackAllocator.h
Engine/src/SimpleEngine/EventSystem/: EventCategory.h  EventDispatcher.h  EventType.h  IEvent.h  IEventListener.h
Engine/src/SimpleEngine/RenderSpecific/: RenderAPI.h
Engine/src/SimpleEngine/RenderSpecific/OpenGL/Window/: OpenGLContext.cpp  OpenGLContext.h  OpenGLWindow.cpp  OpenGLWindow.h
Engine/src/SimpleEngine/Window/: IWindow.h  WindowFactory.cpp  WindowFactory.h
Engine/src/Window/: IContext.h  WindowFactory.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: RenderLayer.cpp  RenderLayer.h  SandboxApp.cpp  main.cpp
